[package]
name = "epub2txt"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]
description = "Simple EPUB to TXT converter."

[[bin]]
name = "epub2txt"
doc = false

[lib]
name = "epub2txt"

[dependencies]
url = "1.2"
zip = { version = "0.2", default-features = false }
clap = "2.19"
kuchiki = "*"
html2text = "0.1"
lazy_static = "0.2"
error-chain = "0.10"
