[package]
name = "epub2txt"
version = "0.2.0"
authors = ["quininer kel <quininer@live.com>"]
description = "Simple EPUB to TXT converter."

[[bin]]
name = "epub2txt"
doc = false

[lib]
name = "epub2txt"

[dependencies]
url = "1.2"
zip = "0.3"
clap = "2.19"
failure = "0.1"
kuchiki = "0.6"
lazy_static = "1.0"
