[package]
name = "epub2txt"
version = "0.2.0"
authors = ["quininer kel <quininer@live.com>"]
description = "Simple EPUB to TXT converter."

[[bin]]
name = "epub2txt"
doc = false

[lib]
name = "epub2txt"

[dependencies]
url = "2.5"
zip = "0.6.6"
clap = "2"
failure = "0.1"
kuchiki = "0.8.1"
lazy_static = "1.4"
